z-index fixes

--- a/framework/includes/option-types/datetime-picker/static/css/style.css
+++ b/framework/includes/option-types/datetime-picker/static/css/style.css
@@ -1,7 +1,6 @@
 .xdsoft_datetimepicker.xdsoft_noselect {
-	z-index: 160013;
+	z-index: 560100; /* bigger than fw.OptionsModal's z-index */
 }
-
 
 .fw-backend-option-input-type-datetime-picker .fw-option-help-in-input {
 	top: 4px !important;
